--- a/p/s/players.html
+++ b/p/s/players.html
@@ -130,6 +130,7 @@
                 <th>Logo URL</th>
                 <th>Photo of player</th>
                 <th>Profile</th>
+                <th>Registration Fee</th>
                 <!--<th>Fb Page of School</th>-->
                 <th>Fb Page of Esport Team</th>
               </tr>
@@ -173,6 +174,9 @@
                 <th>Player 5 IGN</th>
                 <th>Player 5 Id</th>
                 <th>Player 5 FB Link</th>
+                <th>Logo</th>
+                <th>Photo of Players</th>
+                <th>Registration Fee</th>
               </tr>
             </thead>
             <tbody id="tableh-body">
