--- a/p/s/reg/valorantreg.html
+++ b/p/s/reg/valorantreg.html
@@ -83,8 +83,8 @@
 
         <h3>Other Information</h3>
         <img id="vyseflower1" src="/p/s/s/img/0cd35584b7c20c0e429c6239a52c87f15e546e47.png" alt="image">
-        <!-- <label for="vl-fbpageofschool" style="display: none;">Fb Page of School</label></br>
-        <input type="text" name="vl-fbpageofschool" placeholder="Fb Page of School (link*)" required><br /> -->
+        <br /><br /><label for="vl-fee">Registration fee</label><br />
+        <input type="file" accept="image/*" id="regfee" name="vl-fee"required><br />
   
         <label for="vl-fbPageEsportUrl" style="display: none;">Fb Page of Esport Team</label></br>
         <input type="text" name="vl-fbPageEsportUrl" placeholder="Fb Page of Esport Team (link*)" required><br />
